[project]
name = "python"
version = "0.1.0"
description = "Host-side Python tools for the STM32F103 THD (Total Harmonic Distortion) measurement project: FFT twiddle-factor table generation, Hanning window table generation, and ADC waveform capture/plotting."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "pyserial>=3.5",
]
